
* 3.2.0 *

* Properly use 'SCHEMA' name arguement in DB statements to comply with ActiveRecord::ExplainSubscriber::IGNORED_PAYLOADS.

* Make use of the new ConnectionAdapters::SchemaCache for our needs.

* New Sqlserver::Utils class for out helpers. Moved table name unquotes there.


* 3.1.5 *

* Better support for orders with an expression. Fixes #155. [Jason Frey, Joe Rafaniello]


* 3.1.4 *

* Use INFORMATION_SCHEMA.KEY_COLUMN_USAGE for schema reflection speed. 
  Fixes #125. [Wüthrich Hannes @hwuethrich]

* New deadlock victim retry using the #retry_deadlock_victim config.  [Jason Frey, Joe Rafaniello]

* Renamed #with_auto_reconnect to #with_sqlserver_error_handling now that it handles both dropped
  connections and deadlock victim errors. Fixes #150 [Jason Frey, Joe Rafaniello]

* Add activity_stats method that mimics the SQL Server Activity Monitor. Fixes #146 [Jason Frey, Joe Rafaniello]

* Add methods for sqlserver's #product_version, #product_level, #edition and include them in inspect.
  Fixes #145 [Jason Frey, Joe Rafaniello]
  
* Handle statements that cannot be retried on a new database connection by not reconnecting. 
  Fixes #147 [Jason Frey, Joe Rafaniello]
  
* Added connection#spid for debugging. Fixes #144 [Jason Frey, Joe Rafaniello]

* Add ENV['TEST_FILES'] to Rakefile for easy single case tests. [Jason Frey, Joe Rafaniello]

* Pass ActiveRecord tests. Made windowed distinct pass all orders to groups.
  - test_limited_eager_with_multiple_order_columns
  - test_limited_eager_with_order

* Pass AR tests by moving DISTINCT to GROUP BY in windowed SQL.
  - test_count_eager_with_has_many_and_limit_and_high_offset
  - test_eager_with_has_many_and_limit_and_high_offset


* 3.1.3 *

* Distinguish between identity and primary key key columns during schema reflection. Allows us 
  us to only do identity inserts when technically needed. Fixes #139 [chadcf] & [joncanady]


* 3.1.2 *
